# PyTorch-HITNet-Hierarchical-Iterative-Tile-Refinement-Network-for-Real-time-Stereo-Matching

./: README.md  main.py
datasets/RANSAC_slanted_window_fit/: CMakeLists.txt
datasets/RANSAC_slanted_window_fit/filenames/: eth3d_train.txt  eth3d_train_dense.txt  kitti12_train.txt  kitti12_train_dense.txt  kitti15_train.txt  kitti15_train_dense.txt  mb_train.txt  mb_trainF.txt  mb_trainF_dense.txt  mb_train_dense.txt  sceneflow_test_gt.txt  sceneflow_train_gt.txt
utils/: metrics.py  visualization.py
